[package]
name = "gpuiex"
version = "0.1.0"
edition = "2021"

[dependencies]
#gpui = { git = "https://github.com/stormasm/gpuionly-250409.git", branch = "bp1" }
#gpui = { git = "https://github.com/stormasm/gpuionly-250419.git" }
#gpui = { git = "https://github.com/stormasm/gpuionly-250419ex.git" }
gpui = { path = "/Users/ma/j/tmp10/gpuionly-250419ex/crates/gpui" }
#gpui = { path = "/Users/ma/j/tmp10/gpuionly-250419/crates/gpui" }
